<resources>
    <string name="app_name">MyBrary</string>
    <string name="com_auth0_client_id">BLrARwgyQpbyZHqmF1vHvA3CkVKR29hG</string>
    <string name="com_auth0_domain">dev-k3ad2kav.us.auth0.com</string>

    <!-- Login / Register -->
    <string name="email">email</string>
    <string name="code">password</string>
    <string name="loginBtn">Submit</string>
    <string name="registerBtn">Register</string>
    <string name="register">Create Account</string>
    <string name="login">Login</string>
    <string name="enter_code">Enter code sent to email</string>

    <!--  Main Activity -->
    <string name="add_folder_btn">AddFolderBtn</string>
    <string name="userGuide">User guide</string>

    <!--  Folder Activity -->
    <string name="folder_title_hint">Folder title</string>
    <string name="add_word_btn">Add word</string>

    <!-- New Folder Activity-->

    <!-- New/Update Word Activity -->
    <string name="word_hint">New word</string>
    <string name="translation_hint">Translation</string>
    <string name="notes_hint">Notes</string>
    <string name="reviewable">Reviewable</string>

    <string name="cancel_btn">Cancel</string>
    <string name="save_btn">Save</string>
    <string name="delete_btn">Delete</string>

    <!-- Review Notification card -->
    <string name="review_text">reviews</string>

    <!-- Settings -->
    <string name="logout">logout</string>

    <!--  Review Card Animation parameters  -->
    <integer name="card_flip_time">1000</integer>
    <integer name="card_flip_time_half">500</integer>

    <!-- id -->
    <item name="nextReviewBtn" type="id" />

</resources>