<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.NewFolderActivity"
    android:padding="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/folderInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/folder_title_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/folderInput"
        android:layout_marginTop="40dp"
        android:id="@+id/buttonLayout">

        <Button
            android:id="@+id/wpCreateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_btn"
            android:visibility="visible"
            android:layout_marginEnd="30dp"
            android:theme="@style/MyButtons" />

        <Button
            android:id="@+id/wpCancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_btn"
            android:layout_marginStart="30dp"
            android:theme="@style/MyButtons"/>

    </LinearLayout>

</RelativeLayout>