<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.RegisterActivity">

    <ImageView
        android:id="@+id/blossomRed"
        android:layout_width="500dp"
        android:layout_height="500dp"

        android:layout_marginTop="-200dp"
        android:layout_marginEnd="-100dp"
        android:alpha="0.5"
        android:src="@drawable/blossom3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/blossomGreen"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginEnd="-100dp"
        android:layout_marginStart="-100dp"
        android:layout_marginBottom="-100dp"
        android:alpha="0.5"
        android:rotation="70"
        android:scaleY="-1"
        android:src="@drawable/blossom4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registerTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="25dp"
        android:textColor="@color/black_coffee"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:errorEnabled="true"
        android:layout_marginBottom="200dp"
        android:hint="@string/email"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/registerTxt"
        tools:layout_editor_absoluteX="20dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:startIconDrawable="@drawable/ic_mail"
        app:boxStrokeColor="@color/emerald_dark"
        app:hintTextColor="@color/emerald_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailInput"
            android:textCursorDrawable="@null"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="200dp"
        android:hint="@string/code"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/textField"
        tools:layout_editor_absoluteX="20dp"
        android:layout_marginTop="10dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeColor="@color/emerald_dark"
        app:hintTextColor="@color/emerald_dark"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/emerald"
        android:textSize="20dp"
        android:paddingVertical="5dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/passwordField"
        app:layout_constraintTop_toBottomOf="@+id/passwordField" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="80dp"
        android:paddingVertical="10dp"
        android:theme="@style/Button.Black"
        android:textColor="@color/white"
        android:text="@string/loginBtn"
        android:visibility="visible"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField"
        app:layout_constraintVertical_bias="0.277" />

</androidx.constraintlayout.widget.ConstraintLayout>